apps/accounting/accounting.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounting
  labels:    
    app: accounting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounting      
  template:
    metadata:
      labels:
        app: accounting        
    spec:
      containers:
        - name: accounting
          image: "docker.io/burrsutter/hello:1.0.0"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
