apps/accounting/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounting
  labels:    
    app: accounting
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: accounting
